deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: tektoncd-nodejs-tutorial-dc
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        traffic: "true"
    spec:
      containers:
        - image: docker-registry.default.svc:5000/web-backend/tektoncd-nodejs-tutorial:latest
          imagePullPolicy: Always
          name: tektoncd-nodejs-tutorial-image
          ports:
            - containerPort: 8080
              protocol: "TCP"
          # command: ["/bin/sh", "-c", "while true ; do date; sleep 1; done;"]
  # triggers:
  # - type: ConfigChange
